# hermes-gateway

./: .env.example  .gitignore  Dockerfile  README.md  auth.py  docker-compose.yml  hash_password.py  main.py  mock_hermes_agent.py  proxy.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: docker-publish.yml
cicd/: build-and-push.sh
docs/: user-management-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  router.js
frontend/src/views/: DashboardView.vue  LoginView.vue  UserManagementView.vue
hermes-gateway/: .env.example  Dockerfile  README.md  docker-compose.yml  mock_hermes_agent.py  proxy.py  run.sh
hermes-gateway/nginx/: hermes.conf
hermes-gateway/templates/: base.html  login.html
templates/: admin_users.html
