[project]
name = "hermes-gateway"
version = "0.1.0"
description = "Authentication gateway for Hermes agent dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pyjwt>=2.10.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<4.1",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.5",
]

[dependency-groups]
dev = []
